--- a/style.css
+++ b/style.css
@@ -98,10 +98,12 @@ header nav .logo-ul .movies-list{
     background-color: black;
     z-index: 10;
     padding: 5px;
+    display: none;
 }
 
 header nav .logo-ul li:hover .movies-list{
     opacity: 1;
+    display: block;
 }
 header nav .logo-ul li:hover .movies-list p{
     cursor: pointer;
@@ -386,57 +388,75 @@ header section:hover .fa-chevron-right{
 
 /* !movies syfasi tasarimi */
 
-.movies-body{
+.movies-body,
+.series-body{
     width: 100%;
     background-color: black;
     font-family: "Poppins", serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 50px; /* Üst ve alt için 50px, sağ ve sol için 50px boşluk */
+    padding-top: 50px;
 }
 
-.movies-body header{
+.movies-body header,
+.series-body header{
     position: relative;
     width: 80%;
     border: 1px solid white;
     border-radius: 20px;
     overflow: hidden;
-    margin: 20px 0; /* Üst ve alt boşluk */
 }
 
-.movies-body .movies-content{
+.movies-body .movies-content,
+.series-body .series-content{
     margin-top: 50px;
 }
 
-.movies-content .popular{
+.movies-content .popular,
+.series-content .popular{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; /* Aralarındaki boşluk artacak */
+    justify-content: center;
     align-items: center;
-    gap: 20px; /* Kartlar arası boşluk artırıldı */
+    gap: 10px;
 }
 
-.movies-content .popular .movie-card{
-    width: 22%; /* Kartların genişliğini biraz küçülttük */
+.movies-content .popular .movie-card,
+.series-content .popular .serie-card{
+    width: 22%;
     border: 1px solid white;
-    margin: 10px; /* Kartların dışına boşluk ekledik */
 }
 
-.movies-content .popular .movie-card img{
+.movies-content .movie-card,
+.series-content .serie-card{
+    overflow: hidden;
+}
+
+.movies-content .movie-card:hover img,
+.series-content .serie-card:hover img {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
+
+.movies-content .popular .movie-card img,
+.series-content .popular .serie-card img{
     width: 100%;
     height: 300px;
     cursor: pointer;
 }
 
-.movies-content .popular .movie-card .movie-info{
+.movies-content .popular .movie-card .movie-info,
+.series-content .popular .serie-card .serie-info{
+    margin-top: -10px;
     text-align: center;
     color: white;
-    padding: 15px;
+    padding: 20px 10px;
     background: linear-gradient(45deg,black,white);
 }
 
-.movies-content .popular .movie-card .movie-info h4{
+.movies-content .popular .movie-card .movie-info h4,
+.series-content .popular .serie-card .serie-info h4{
     text-transform: uppercase;
     font-weight: bold;
     text-overflow: ellipsis;
@@ -444,20 +464,128 @@ header section:hover .fa-chevron-right{
     overflow: hidden;
 }
 
-.movies-content .popular .movie-card .movie-info p{
+.movies-content .popular .movie-card .movie-info p,
+.series-content .popular .serie-card .serie-info p{
     font-size: 12px;
 }
 
-.movies-content .popular .movie-card .movie-info h6{
+.movies-content .popular .movie-card .movie-info h6,
+.series-content .popular .serie-card .serie-info h6{
     color: white;
     margin-top: 5px;
 }
 
-.movies-content .popular .movie-card .movie-info span{
+.movies-content .popular .movie-card .movie-info span,
+.series-content .popular .serie-card .serie-info span{
     background-color: yellow;
     padding: 3px;
-    margin-right: 3px;
+    margin: 3px 5px;
     color: black;
     border-radius: 2px;
+}
+
+
+
+
+/* ! Detay.html sayfasının tasarımı */
+.detay-body{
+    width: 100%;
+    background: black;
+    font-family: "Poppins",sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.detay-body header{
+    position: relative;
+    width: 80%;
+    border: 1px solid white;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.detay-body header .film-detay-wrapper .film-detay{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .film-bilgileri{
+    margin: 50px 20px;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .film-bilgileri h2{
+    font-size: 45px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    border-bottom: 1px solid white;
+    margin-bottom: 10px;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .film-bilgileri strong{
+    color: wheat;
+    margin-right: 10px;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .film-bilgileri p{
+    font-style: italic;
+    margin: 10px 0px;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .fragman-izle-btn{
+    color: white;
+    background-color: wheat;
+    border: none;
+    padding: 3px 5px;
+    cursor: pointer;
+    transition: all 0.3s linear;
+    border-radius: 2px;
+}
+
+.detay-body header .film-detay-wrapper .film-detay .fragman-izle-btn:hover{
+    transform: scale(0.9);
+}
+
+
+.detay-body .oyuncular-wrapper{
+    padding-inline: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.detay-body .oyuncular-wrapper .oyuncu-card{
+    width: 24%;
+    height: 400px;
+    color: white;
+    margin-bottom: 20px;
+    border: 2px solid grey;
+    box-shadow: 3px 3px 10px grey;
+    background: linear-gradient(45deg,black,white);
+    text-align: center;
+}
+
+.detay-body .oyuncular-wrapper .oyuncu-card img{
+    width: 100%;
+    height: 300px;
+}
+
+.detay-body .oyuncular-wrapper .oyuncu-card strong{
+    color: wheat;
+    margin-right: 5px;
+}
+
+.detay-body h3{
+    color: white;
+    text-align: center;
+    font-size: 35px;
+    border: 1px solid white;
+    background: linear-gradient(45deg,darkred,white);
+    letter-spacing: 2px;
+    margin-bottom: 20px;
 }
 
