--- a/style.css
+++ b/style.css
@@ -100,6 +100,21 @@ header nav .logo-ul .movies-list{
     padding: 5px;
     display: none;
 }
+header nav #searchInput{
+    width: 200px;
+    height: 30px;
+    margin-top: 10px;
+    border-radius: 5px;
+    border: 1px solid white;
+    background-color: transparent;
+    padding-inline: 5px;
+    color: white;
+    outline: none;
+}
+
+header nav #searchInput::placeholder{
+    color: white;
+}
 
 header nav .logo-ul li:hover .movies-list{
     opacity: 1;
